refactored popups to fix stacking context and z-index issues

--- a/meal-planner/src/App.css
+++ b/meal-planner/src/App.css
@@ -411,8 +411,8 @@ button:focus {
       align-items: center;
       bottom: -10px;
       right: -10px;
+      z-index: 1;
       /* z-index: 4; */
-      z-index: 10;
       opacity: 0.7;
       img {
         width: 9px;
